# inkbox-power-daemon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deploy.sh  kobo.cmake  vscode-launch.sh
lib/: instructions.txt
other/: docs.md
src/: AppsFreeze.cpp  Wifi.cpp  Wifi.h  afterSleep.cpp  afterSleep.h  appsFreeze.cpp  appsFreeze.h  cinematicBrightness.cpp  cinematicBrightness.h  configUpdate.cpp  configUpdate.h  devices.cpp  devices.h  fbinkFunctions.cpp  fbinkFunctions.h  functions.cpp  functions.h  goingSleep.cpp  goingSleep.h  idleSleep.cpp  main.cpp  monitorEvents.cpp  monitorEvents.h  pipeHandler.cpp  pipeHandler.h  prepareSleep.cpp  prepareSleep.h  usbnet.cpp  usbnet.h  watchdog.cpp  wifi.cpp  wifi.h
